<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
      android:id="@+id/tab_add_tool_bar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:layout_weight="1"
      app:popupTheme="@style/PopupMenu" />
  </android.support.design.widget.AppBarLayout>

  <android.support.constraint.ConstraintLayout
    android:id="@+id/ConstraintLayout2"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appbar">

    <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      android:text="@string/please_enter_the_name_of_the_newly_created_tab"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <EditText
      android:id="@+id/add_tab_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
      android:id="@+id/textView2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      android:text="@string/please_enter_the_url_to_use_on_the_newly_created_tab"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/add_tab_name" />

    <EditText
      android:id="@+id/add_tab_url"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textUri"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
      android:id="@+id/textView3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      android:text="@string/please_select_the_type_of_the_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/add_tab_url" />

    <RadioGroup
      android:id="@+id/chose_content_type_radio_group_add_activity"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3">

      <RadioButton
        android:id="@+id/rss_add_radio_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/rss_or_atom_type"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="371dp" />

      <Space
        android:layout_width="16dp"
        android:layout_height="wrap_content" />

      <RadioButton
        android:id="@+id/json_add_radio_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/json_type" />
    </RadioGroup>

    <Button
      android:id="@+id/tab_add_ok_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:text="@string/ok__button"
      android:padding="@dimen/button_padding"
      app:layout_constraintBaseline_toBaselineOf="@+id/tab_add_cancel_button"
      app:layout_constraintEnd_toEndOf="parent" />

    <Button
      android:id="@+id/tab_add_cancel_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="24dp"
      android:text="@string/cancel__button"
      android:padding="@dimen/button_padding"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/chose_content_type_radio_group_add_activity" />
  </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
