<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
      android:id="@+id/group_edit_tool_bar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:layout_weight="1"
      app:popupTheme="@style/PopupMenu" />
  </android.support.design.widget.AppBarLayout>

  <android.support.constraint.ConstraintLayout
    android:id="@+id/ConstraintLayout2"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appbar">

    <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      android:text="@string/please_enter_a_new_group_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <EditText
      android:id="@+id/edit_group_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:inputType="text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
      android:id="@+id/group_edit_ok_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:text="@string/ok__button"
      app:layout_constraintBaseline_toBaselineOf="@+id/group_edit_cancel_button"
      app:layout_constraintEnd_toEndOf="parent" />

    <Button
      android:id="@+id/group_edit_cancel_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="24dp"
      android:text="@string/cancel__button"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_group_name" />
  </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
